[gd_scene load_steps=14 format=3 uid="uid://cyxg4wi5d0e8m"]

[ext_resource type="Script" uid="uid://c6r3yj7n7r3nk" path="res://scripts/station.gd" id="1_xmj61"]
[ext_resource type="PackedScene" uid="uid://cbpmugmrvnged" path="res://scenes/snap_marker.tscn" id="2_sum1q"]
[ext_resource type="Texture2D" uid="uid://bw8dglvlm0l6y" path="res://sprits/counter_stove.png" id="3_oblqs"]
[ext_resource type="Texture2D" uid="uid://cdfxycdl36ifh" path="res://sprits/Counter.stove.png" id="3_sum1q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k7ugr"]
atlas = ExtResource("3_oblqs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_72kuv"]
atlas = ExtResource("3_oblqs")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qalsi"]
atlas = ExtResource("3_oblqs")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_olwe1"]
atlas = ExtResource("3_sum1q")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_87b1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7ugr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72kuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qalsi")
}],
"loop": true,
"name": &"cooking",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_olwe1")
}],
"loop": true,
"name": &"inactive",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmj61"]
size = Vector2(64, 64)

[sub_resource type="Theme" id="Theme_csis4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hcop"]
bg_color = Color(0.0113443, 0.0113443, 0.0113443, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmmug"]
bg_color = Color(1, 0.09411765, 0, 1)

[node name="Station" type="Area2D" groups=["dropoff"]]
script = ExtResource("1_xmj61")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." groups=["dropoff"]]
visibility_layer = 2
sprite_frames = SubResource("SpriteFrames_87b1w")
animation = &"cooking"
autoplay = "inactive"

[node name="Marker2D" parent="." groups=["dropoff"] instance=ExtResource("2_sum1q")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["dropoff"]]
shape = SubResource("RectangleShape2D_xmj61")

[node name="Timer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -41.0
offset_top = 34.0
offset_right = 41.0
offset_bottom = 61.0
scale = Vector2(1.0301274, 0.4255116)
theme = SubResource("Theme_csis4")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_styles/background = SubResource("StyleBoxFlat_7hcop")
theme_override_styles/fill = SubResource("StyleBoxFlat_fmmug")
max_value = 5.0
step = 1.0
value = 3.0
rounded = true
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
